--- a/locales/en.json
+++ b/locales/en.json
@@ -5,6 +5,7 @@
     "service": "Service",
     "client": "Client ID",
     "client_type": "Client Type",
+    "nodata": "No Data",
     "allowed": "Allowed",
     "prompt_count": "Prompt Count",
     "indirect_object_identifier": "Paired Client ID",
@@ -21,6 +22,7 @@
     "AppleEvents": "Automation",
     "PostEvent": "Post Event",
     "kTCCServiceLocation": "Location",
+    "Location": "Location",
     "AllFiles": "Full Disk Access",
     "SysAdminFiles": "System Admin Files",
     "DeveloperFiles": "Developer Files",
@@ -28,5 +30,8 @@
     "DocumentsFolder": "Documents Folder",
     "DesktopFolder": "Desktop Folder",
     "DownloadsFolder": "Downloads Folder",
-    "RemovableVolumes": "Removable Volumes"
+    "RemovableVolumes": "Removable Volumes",
+    "accessibility": "Accessibility",
+    "camera": "Camera",
+    "microphone": "Microphone"
 }
