Updated for Monterey
Fixed lots of widget bugs too

--- a/locales/en.json
+++ b/locales/en.json
@@ -24,14 +24,25 @@
     "kTCCServiceLocation": "Location",
     "Location": "Location",
     "AllFiles": "Full Disk Access",
+    "SystemPolicyAllFiles": "Full Disk Access",
     "SysAdminFiles": "System Admin Files",
     "DeveloperFiles": "Developer Files",
     "DeveloperFile": "Developer Files",
+    "DeveloperTool": "Developer Tool",
     "DocumentsFolder": "Documents Folder",
     "DesktopFolder": "Desktop Folder",
     "DownloadsFolder": "Downloads Folder",
     "RemovableVolumes": "Removable Volumes",
+    "NetworkVolumes": "Network Volumes",
+    "ScreenCapture": "Screen Capture",
     "accessibility": "Accessibility",
+    "Camera": "Camera",
     "camera": "Camera",
-    "microphone": "Microphone"
+    "Siri": "Siri",
+    "ShareKit": "ShareKit",
+    "Reminders": "Reminders",
+    "Photos": "Photos",
+    "Calendar": "Calendar",
+    "microphone": "Microphone",
+    "Microphone": "Microphone"
 }
