--- a/locales/en.json
+++ b/locales/en.json
@@ -36,6 +36,10 @@
     "NetworkVolumes": "Network Volumes",
     "ScreenCapture": "Screen Capture",
     "accessibility": "Accessibility",
+    "BluetoothAlways": "Bluetooth",
+    "FileProviderDomain": "File Provider",
+    "FocusStatus": "Focus Status",
+    "ListenEvent": "Listen Event",
     "Camera": "Camera",
     "camera": "Camera",
     "Siri": "Siri",
