Add more widgets

--- a/locales/en.json
+++ b/locales/en.json
@@ -19,7 +19,7 @@
     "PhotosAdd": "Photos Add",
     "Willow": "HomeKit",
     "MediaLibrary": "Media Library",
-    "AppleEvents": "Automation",
+    "AppleEvents": "Apple Events",
     "PostEvent": "Post Event",
     "kTCCServiceLocation": "Location",
     "Location": "Location",
@@ -28,7 +28,7 @@
     "SysAdminFiles": "System Admin Files",
     "DeveloperFiles": "Developer Files",
     "DeveloperFile": "Developer Files",
-    "DeveloperTool": "Developer Tool",
+    "DeveloperTool": "Developer Tools",
     "DocumentsFolder": "Documents Folder",
     "DesktopFolder": "Desktop Folder",
     "DownloadsFolder": "Downloads Folder",
