--- a/locales/en.json
+++ b/locales/en.json
@@ -48,5 +48,25 @@
     "Photos": "Photos",
     "Calendar": "Calendar",
     "microphone": "Microphone",
-    "Microphone": "Microphone"
+    "Microphone": "Microphone",
+    "ContactsFull": "Contacts Full",
+    "ContactsLimited": "Contacts Limited",
+    "SystemPolicyAppBundles": "App Bundles Access",
+    "FileProviderPresence": "File Provider Presence",
+    "Motion": "Motion",
+    "Prototype3Rights": "Prototype 3 Rights",
+    "Prototype4Rights": "Prototype 4 Rights",
+    "SpeechRecognition": "Speech Recognition",
+    "SystemPolicyDesktopFolder": "Desktop Folder",
+    "SystemPolicyDeveloperFiles": "Developer Files",
+    "SystemPolicyDocumentsFolder": "Documents Folder",
+    "SystemPolicyDownloadsFolder": "Downloads Folder",
+    "SystemPolicyNetworkVolumes": "Network Volumes",
+    "SystemPolicyRemovableVolumes": "Removable Volumes",
+    "SystemPolicySysAdminFiles": "System Admin Files",
+    "LinkedIn": "LinkedIn Share",
+    "Twitter": "Twitter Share",
+    "Facebook": "Facebook Share",
+    "SinaWeibo": "Sina Weibo Share",
+    "TencentWeibo": "Tencent Weibo Share"
 }
